--- a/.github/workflows/push_hub.yml
+++ b/.github/workflows/push_hub.yml
@@ -6,6 +6,8 @@ on:
   pull_request:
     branches:
     - master
+  schedule:
+    - cron: "24 04 1 * *"
 jobs:
   build_ursadb:
     name: Build image
